<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/brackets"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="( )"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/percentage"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/percentage"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/backspace"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/backspace"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/one"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/two"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/three"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/add"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/add"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/four"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/five"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/six"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sub"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/sub"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/mul"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/mul"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/dot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/dot"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/equal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/equals"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/div"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/div"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/textView1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"
        android:autofillHints="false"
        android:background="@null"
        android:cursorVisible="false"
        android:ems="10"
        android:gravity="right"
        android:inputType="none"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="false"
        android:ems="10"
        android:inputType="none"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        app:srcCompat="@drawable/baseline_record_voice_over_24" />


</androidx.constraintlayout.widget.ConstraintLayout>